tests/netperf/isilon_10G/udp_075/outgoing.txt
zephram-1# netserver -D
Starting netserver with host 'IN(6)ADDR_ANY' port '12865' and family AF_UNSPEC
^C
zephram-1# 









────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
zephram-1# bash cpu_usage.sh netserver
^C
10.3 12.3 13.0 14.9 15.1 16.9 16.9 18.9 19.0 21.0 20.8 22.2 21.4 22.9 22.0 23.9 23.4 25.1 23.9 25.4 24.6 26.7 26.0 27.9 27.5 29.1 27.8 29.2 28.1 29.8 28.9 30.8 29.3 30.9 29.5 31.3 29.9 31.6 30.4 32.2 31.2 33.0 31.7 32.9 31.5 33.5 32.4 34.0 32.8 34.3 32.8 34.8
average: 26.2635
zephram-1# 









────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
zephram-2# ./ipfwd 1 0.75
[ipfwd] starting
current:  9.143%, error:  9.1%, probability:  0.750%
current:  10.413%, error:  1.3%, probability:  0.750%
current:  10.577%, error:  0.2%, probability:  0.750%
current:  11.731%, error:  1.2%, probability:  0.750%
current:  11.792%, error:  0.1%, probability:  0.750%
current:  12.848%, error:  1.1%, probability:  0.750%
current:  13.818%, error:  1.0%, probability:  0.750%
^C
zephram-2# ipfw show | wc
      52     470    3265
zephram-2# 










────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
zephram-2# netperf -l 30 -H 7.7.7.2 -t UDP_STREAM
MIGRATED UDP STREAM TEST from 0.0.0.0 (0.0.0.0) port 0 AF_INET to 7.7.7.2 (7.7.7.2) port 0 AF_INET
Socket  Message  Elapsed      Messages                
Size    Size     Time         Okay Errors   Throughput
bytes   bytes    secs            #      #   10^6bits/sec

 16384   16384   30.01     2117723      0    9250.18
512000           30.01     2116866           9246.44

zephram-2# 










────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
zephram-2# bash cpu_usage.sh netperf
^C
13.0 15.2 19.4 23.4 25.1 29.2 30.2 34.5 35.7 39.9 40.2 44.3 44.3 48.8 53.2 52.4 56.8 55.7 60.2 59.0 63.4 61.6 66.3 64.3 68.6 66.6 71.0 68.5 73.0 77.4 74.8 78.7 75.8 80.2 76.9 81.2 78.0 82.5 79.2 83.7 80.1 84.4 81.0 85.4 89.7 85.9 90.4 86.4 91.1 86.9 91.5 86.7 91.3 87.1 91.2 87.0
average: 65.1482
zephram-2# 

